--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,16 +14,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.jbion.android.sample.swipe.SwipeActivity"
+            android:name="com.jbion.android.sample.SampleActivity"
             android:label="@string/title_activity_swipe" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.jbion.android.sample.pulltorefresh.PullableListActivity"
-            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
